apps/hadrians-wall/bluey/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hadrians-wall
  name: hadrians-wall
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: hadrians-wall
  type: ClusterIP
