apps/hadrians-wall/bluey/ingress-external.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: hadrians-wall-external
  namespace: hadrians-wall
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
    nginx.ingress.kubernetes.io/auth-method: GET
    nginx.ingress.kubernetes.io/auth-url: http://authelia.authelia.svc.cluster.local/api/verify
    nginx.ingress.kubernetes.io/auth-signin: https://auth.babyvelociraptor.com?rm=$request_method
    nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Name,Remote-Groups,Remote-Email
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Method $request_method;
    # nginx.ingress.kubernetes.io/auth-type: basic
    # # name of the secret that contains the user/password definitions
    # nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # # message to display with an appropriate context why the authentication is required
    # nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  ingressClassName: nginx-external
  tls:
  - hosts:
    - hadrians-wall-e.babyvelociraptor.com
    secretName: hadrians-wall-e-tls
  rules:
    - host: hadrians-wall-e.babyvelociraptor.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hadrians-wall
                port:
                  name: web
