apps/hadrians-wall/bluey/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: hadrians-wall
  namespace: hadrians-wall
spec:
  rules:
    - host: hadrians-wall.babyvelociraptor.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hadrians-wall
                port:
                  name: web
